Fix multiplayer buttons in high contrast
Setting background instead of background-color cleared background-position and background-size properties which are needed to arrange the image. All we actually want to do here is set the color.

--- a/react-common/styles/controls/Button.less
+++ b/react-common/styles/controls/Button.less
@@ -290,7 +290,7 @@ a.common-button.menu-button {
 .high-contrast, .hc {
     .common-button {
         color: @highContrastTextColor !important;
-        background: @highContrastBackgroundColor !important;
+        background-color: @highContrastBackgroundColor !important;
         border-color: @highContrastTextColor !important;
 
         &:hover, &:focus {
